Añadidos archivos y empezado pagos.html

--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -5,6 +5,7 @@
     <title>Pagos - Red Sox</title>
 </head>
 <body>
+<h1 class="titulo">Pagos Pendientes</h1>
 <div id=pagosContent>
     <div id="pagoPendiente1" class="pagoPendiente">
         <div class="pestanaFechaInicioPago"></div>
