prueba pagos.css

--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/pagos.css">
     <title>Pagos - Red Sox</title>
 </head>
 <body>
+<div class="content">
 <h1 class="titulo">Pagos Pendientes</h1>
 <div id=pagosContent>
     <div id="pagoPendiente1" class="pagoPendiente">
@@ -52,6 +54,7 @@
             <p class="fechaLimitePago"></p>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
