--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -5,6 +5,23 @@
     <title>Pedidos - Red Sox</title>
 </head>
 <body>
+<div id=pedidosContent>
+    <div id="pedido1" class="pedidoActivo">
+        <div class="contenidoPedido">
+            <h3 class="producto"></h3>
+            <p class="infoPedido"></p>
+            FECHA LÍMITE<p class="infoPedido"></p>
+        </div>
+    </div>
+    <div id="pedido2" class="pedidoCerrado">
+        <div class="contenidoPedido">
+            <h3 class="producto"></h3>
+            <p class="infoPedido"></p>
+            FECHA LÍMITE<p class="infoPedido"></p>
+        </div>
+    </div>
+    </div>
 
+</div>
 </body>
 </html>
