--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -5,19 +5,21 @@
     <title>Pedidos - Red Sox</title>
 </head>
 <body>
+<div >
+<h1>Pedidos Pendientes</h1>
 <div id=pedidosContent>
     <div id="pedido1" class="pedidoActivo">
         <div class="contenidoPedido">
             <h3 class="producto"></h3>
-            <p class="infoPedido"></p>
-            FECHA LÍMITE<p class="infoPedido"></p>
+            <div class="infoPedido"></div>
+            FECHA LÍMITE<div class="infoPedido"></div>
         </div>
     </div>
     <div id="pedido2" class="pedidoCerrado">
         <div class="contenidoPedido">
             <h3 class="producto"></h3>
-            <p class="infoPedido"></p>
-            FECHA LÍMITE<p class="infoPedido"></p>
+            <div class="infoPedido"></div>
+            FECHA LÍMITE<div class="infoPedido"></div>
         </div>
     </div>
     </div>
