--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -5,25 +5,33 @@
     <title>Pedidos - Red Sox</title>
 </head>
 <body>
-<div >
-<h1>Pedidos Pendientes</h1>
-<div id=pedidosContent>
-    <div id="pedido1" class="pedidoActivo">
-        <div class="contenidoPedido">
+<div class="content">
+    <h1>Pedidos Pendientes</h1>
+    <div id=pedidosContent>
+        <div id="pedido1" class="pedidoActivo">
             <h3 class="producto"></h3>
-            <div class="infoPedido"></div>
-            FECHA LÍMITE<div class="infoPedido"></div>
+            <div class="contenidoPedido">
+                <div class="precioEnPedidos"></div>
+                <div class="contentFechaEnPedidos">
+                    <h4 class="tituloFechaPedidos">FECHA LÍMITE</h4>
+                    <div class="fechaLimiteEnPedidos"></div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div id="pedido2" class="pedidoCerrado">
-        <div class="contenidoPedido">
-            <h3 class="producto"></h3>
-            <div class="infoPedido"></div>
-            FECHA LÍMITE<div class="infoPedido"></div>
-        </div>
-    </div>
+            <div id="pedido2" class="pedidoCerrado">
+                <h3 class="producto"></h3>
+                <div class="contenidoPedido">
+                    <div class="precioEnPedidos"></div>
+                    <div class="contentFechaEnPedidos">
+                        <h4 class="tituloFechaPedidos">FECHA LÍMITE</h4>
+                        <div class="fechaLimiteEnPedidos"></div>
+                    </div>
+                </div>
+            </div>
     </div>
 
 </div>
 </body>
 </html>
+
+
