más pruebas en pagos.css

--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -10,48 +10,48 @@
 <h1 class="titulo">Pagos Pendientes</h1>
 <div id=pagosContent>
     <div id="pagoPendiente1" class="pagoPendiente">
-        <div class="pestanaFechaInicioPago"></div>
+        <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
-            <h3 class="tituloPago"></h3>
-            <p class="infoPago"></p>
-            <p class="infoPago"></p>
-            <p class="fechaLimitePago"></p>
+            <h3 class="tituloPago">Mensual Diciembre</h3>
+            <p class="infoPago">10 euros</p>
+            <p class="infoPago">Localizador: 234</p>
+            <p class="fechaLimitePago">11/01/2018</p>
         </div>
     </div>
     <div id="pagoPendiente2" class="pagoUrgente">
-        <div class="pestanaFechaInicioPago"></div>
+        <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
-            <h3 class="tituloPago"></h3>
-            <p class="infoPago"></p>
-            <p class="infoPago"></p>
-            <p class="fechaLimitePago"></p>
+            <h3 class="tituloPago">Mensual Diciembre</h3>
+            <p class="infoPago">10 euros</p>
+            <p class="infoPago">Localizador: 234</p>
+            <p class="fechaLimitePago">11/01/2018</p>
         </div>
     </div>
     <div id="pagoPendiente3" class="pagoExpirado">
-        <div class="pestanaFechaInicioPago"></div>
+        <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
-            <h3 class="tituloPago"></h3>
-            <p class="infoPago"></p>
-            <p class="infoPago"></p>
-            <p class="fechaLimitePago"></p>
+            <h3 class="tituloPago">Mensual Diciembre</h3>
+            <p class="infoPago">10 euros</p>
+            <p class="infoPago">Localizador: 234</p>
+            <p class="fechaLimitePago">11/01/2018</p>
         </div>
     </div>
     <div id="pagoPendiente4" class="pagoPendiente">
-        <div class="pestanaFechaInicioPago"></div>
+        <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
-            <h3 class="tituloPago"></h3>
-            <p class="infoPago"></p>
-            <p class="infoPago"></p>
-            <p class="fechaLimitePago"></p>
+            <h3 class="tituloPago">Mensual Diciembre</h3>
+            <p class="infoPago">10 euros</p>
+            <p class="infoPago">Localizador: 234</p>
+            <p class="fechaLimitePago">11/01/2018</p>
         </div>
     </div>
     <div id="pagoPendiente5" class="pagoExpirado">
-        <div class="pestanaFechaInicioPago"></div>
+        <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
-            <h3 class="tituloPago"></h3>
-            <p class="infoPago"></p>
-            <p class="infoPago"></p>
-            <p class="fechaLimitePago"></p>
+            <h3 class="tituloPago">Mensual Diciembre</h3>
+            <p class="infoPago">10 euros</p>
+            <p class="infoPago">Localizador: 234</p>
+            <p class="fechaLimitePago">11/01/2018</p>
         </div>
     </div>
 </div>
