--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <title>Inicio - Red Sox</title>
 </head>
 <body>
+<div class="pageContainer">
+    <div class="banner">
+        <div class="logoRedSox">
+            <a href="index.html">
+                <img src="../images/logoRedSox.png" class="logoImage">
+            </a>
+        </div>
+        <a href="index.html" class="tituloBanner">
+            CLUB DE BÉISBOL Y SÓFBOL DE SEVILLA
+        </a>
+    </div>
+    <ul class="navigationMenu">
+        <li class="menuButton"><div>AAS</div></li>
+        <li class="menuButton"><div>ASDSA</div></li>
+        <li class="menuButton"><div>ASDAS</div></li>
+        <li class="menuButton"><div>ASDAS</div></li>
+        <li class="menuButton"><div>ASD</div></li>
 
+    </ul>
+    <div class="content"></div>
+</div>
 </body>
 </html>
