--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/pagos.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <title>Pagos - Red Sox</title>
 </head>
 <body>
 <div class="content">
 <h1 class="titulo">Pagos Pendientes</h1>
-<div id=pagosContent>
+<div class="pagosContent">
     <div id="pagoPendiente1" class="pagoPendiente">
         <div class="pestanaFechaInicioPago">10/12/2017</div>
         <div class="contenidoPago">
