Un poco de css general

--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -17,14 +17,16 @@
             CLUB DE BÉISBOL Y SÓFBOL DE SEVILLA
         </a>
     </div>
-    <ul class="navigationMenu">
-        <li class="menuButton"><div>AAS</div></li>
-        <li class="menuButton"><div>ASDSA</div></li>
-        <li class="menuButton"><div>ASDAS</div></li>
-        <li class="menuButton"><div>ASDAS</div></li>
-        <li class="menuButton"><div>ASD</div></li>
-
-    </ul>
+    <div class="mainNavigator">
+        <div class="menuButtons">
+            <ul class="navButtons">
+                <a href="index.html"><li class="navSelect">Inicio</li></a>
+                <a href="busqueda.html"><li class="navButton">Alquiler</li></a>
+                <a href="index.html"><li class="navButton">Compra</li></a>
+                <a href="index.html"><li class="navButton">Contacto</li></a>
+            </ul>
+        </div>
+    </div>
     <div class="content"></div>
 </div>
 </body>
