Un poco de css general

--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -21,13 +21,26 @@
         <div class="menuButtons">
             <ul class="navButtons">
                 <a href="index.html"><li class="navSelect">Inicio</li></a>
-                <a href="busqueda.html"><li class="navButton">Alquiler</li></a>
-                <a href="index.html"><li class="navButton">Compra</li></a>
-                <a href="index.html"><li class="navButton">Contacto</li></a>
+                <a href="index.html"><li class="navButton">Partidos</li></a>
+                <a href="index.html"><li class="navButton">Pagos</li></a>
+                <a href="index.html"><li class="navButton">Pedidos</li></a>
             </ul>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="pageTitle">
+            Inicio
+        </div>
+        <div class="contenidoInicio">
+            AAAAAAAA<br>
+            AAAAAAAA<br>
+            AAAAAAAA<br>
+            AAAAAAAA<br>
+            AAAAAAAA<br>
+            AAAAAAAA<br>
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
