--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -2,60 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/pagos.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <title>Pagos - Red Sox</title>
+    <link rel="stylesheet" type="text/css" href="../css/pagos.css">
+    <title>Inicio - Red Sox</title>
 </head>
 <body>
-<div class="content">
-<h1 class="titulo">Pagos Pendientes</h1>
-<div class="pagosContent">
-    <div id="pagoPendiente1" class="pagoPendiente">
-        <div class="pestanaFechaInicioPago">10/12/2017</div>
-        <div class="contenidoPago">
-            <h3 class="tituloPago">Mensual Diciembre</h3>
-            <p class="infoPago">10 euros</p>
-            <p class="infoPago">Localizador: 234</p>
-            <p class="fechaLimitePago">11/01/2018</p>
+<div class="pageContainer">
+    <div class="banner">
+        <div class="logoRedSox">
+            <a href="index.html">
+                <img src="../images/logoRedSox.png" class="logoImage">
+            </a>
+        </div>
+        <a href="index.html" class="tituloBanner">
+            CLUB DE BÉISBOL Y SÓFBOL DE SEVILLA
+        </a>
+    </div>
+    <div class="mainNavigator">
+        <div class="menuButtons">
+            <ul class="navButtons">
+                <a href="index.html"><li class="navSelect">Inicio</li></a>
+                <a href="index.html"><li class="navButton">Partidos</li></a>
+                <a href="index.html"><li class="navButton">Pagos</li></a>
+                <a href="index.html"><li class="navButton">Pedidos</li></a>
+            </ul>
         </div>
     </div>
-    <div id="pagoPendiente2" class="pagoUrgente">
-        <div class="pestanaFechaInicioPago">10/12/2017</div>
-        <div class="contenidoPago">
-            <h3 class="tituloPago">Mensual Diciembre</h3>
-            <p class="infoPago">10 euros</p>
-            <p class="infoPago">Localizador: 234</p>
-            <p class="fechaLimitePago">11/01/2018</p>
+    <div class="content">
+        <div class="pageTitle">
+            Inicio
+        </div>
+        <div class="contenidoInicio">
+
+            <div class="pagosContent">
+                <div id="pagoPendiente1" class="pagoPendiente">
+                    <div class="pestanaFechaInicioPago">10/12/2017</div>
+                    <div class="contenidoPago">
+                        <h3 class="tituloPago">Mensual Diciembre</h3>
+                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">Localizador: 234</p>
+                        <p class="fechaLimitePago">11/01/2018</p>
+                    </div>
+                </div>
+                <div id="pagoPendiente2" class="pagoUrgente">
+                    <div class="pestanaFechaInicioPago">10/12/2017</div>
+                    <div class="contenidoPago">
+                        <h3 class="tituloPago">Mensual Diciembre</h3>
+                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">Localizador: 234</p>
+                        <p class="fechaLimitePago">11/01/2018</p>
+                    </div>
+                </div>
+                <div id="pagoPendiente3" class="pagoExpirado">
+                    <div class="pestanaFechaInicioPago">10/12/2017</div>
+                    <div class="contenidoPago">
+                        <h3 class="tituloPago">Mensual Diciembre</h3>
+                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">Localizador: 234</p>
+                        <p class="fechaLimitePago">11/01/2018</p>
+                    </div>
+                </div>
+                <div id="pagoPendiente4" class="pagoPendiente">
+                    <div class="pestanaFechaInicioPago">10/12/2017</div>
+                    <div class="contenidoPago">
+                        <h3 class="tituloPago">Mensual Diciembre</h3>
+                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">Localizador: 234</p>
+                        <p class="fechaLimitePago">11/01/2018</p>
+                    </div>
+                </div>
+                <div id="pagoPendiente5" class="pagoExpirado">
+                    <div class="pestanaFechaInicioPago">10/12/2017</div>
+                    <div class="contenidoPago">
+                        <h3 class="tituloPago">Mensual Diciembre</h3>
+                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">Localizador: 234</p>
+                        <p class="fechaLimitePago">11/01/2018</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div id="pagoPendiente3" class="pagoExpirado">
-        <div class="pestanaFechaInicioPago">10/12/2017</div>
-        <div class="contenidoPago">
-            <h3 class="tituloPago">Mensual Diciembre</h3>
-            <p class="infoPago">10 euros</p>
-            <p class="infoPago">Localizador: 234</p>
-            <p class="fechaLimitePago">11/01/2018</p>
-        </div>
-    </div>
-    <div id="pagoPendiente4" class="pagoPendiente">
-        <div class="pestanaFechaInicioPago">10/12/2017</div>
-        <div class="contenidoPago">
-            <h3 class="tituloPago">Mensual Diciembre</h3>
-            <p class="infoPago">10 euros</p>
-            <p class="infoPago">Localizador: 234</p>
-            <p class="fechaLimitePago">11/01/2018</p>
-        </div>
-    </div>
-    <div id="pagoPendiente5" class="pagoExpirado">
-        <div class="pestanaFechaInicioPago">10/12/2017</div>
-        <div class="contenidoPago">
-            <h3 class="tituloPago">Mensual Diciembre</h3>
-            <p class="infoPago">10 euros</p>
-            <p class="infoPago">Localizador: 234</p>
-            <p class="fechaLimitePago">11/01/2018</p>
-        </div>
-    </div>
-</div>
 </div>
 </body>
 </html>
