Css de Pagos y General hecho

--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -41,7 +41,7 @@
                         <h3 class="tituloPago">Mensual Diciembre</h3>
                         <p class="infoPago">10 euros</p>
                         <p class="infoPago">Localizador: 234</p>
-                        <p class="fechaLimitePago">11/01/2018</p>
+                        <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
                 </div>
                 <div id="pagoPendiente2" class="pagoUrgente">
@@ -50,7 +50,7 @@
                         <h3 class="tituloPago">Mensual Diciembre</h3>
                         <p class="infoPago">10 euros</p>
                         <p class="infoPago">Localizador: 234</p>
-                        <p class="fechaLimitePago">11/01/2018</p>
+                        <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
                 </div>
                 <div id="pagoPendiente3" class="pagoExpirado">
@@ -59,7 +59,7 @@
                         <h3 class="tituloPago">Mensual Diciembre</h3>
                         <p class="infoPago">10 euros</p>
                         <p class="infoPago">Localizador: 234</p>
-                        <p class="fechaLimitePago">11/01/2018</p>
+                        <p class="fechaLimiteExpirada">Fecha Límite: 11/01/2018</p>
                     </div>
                 </div>
                 <div id="pagoPendiente4" class="pagoPendiente">
@@ -68,7 +68,7 @@
                         <h3 class="tituloPago">Mensual Diciembre</h3>
                         <p class="infoPago">10 euros</p>
                         <p class="infoPago">Localizador: 234</p>
-                        <p class="fechaLimitePago">11/01/2018</p>
+                        <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
                 </div>
                 <div id="pagoPendiente5" class="pagoExpirado">
@@ -77,7 +77,7 @@
                         <h3 class="tituloPago">Mensual Diciembre</h3>
                         <p class="infoPago">10 euros</p>
                         <p class="infoPago">Localizador: 234</p>
-                        <p class="fechaLimitePago">11/01/2018</p>
+                        <p class="fechaLimiteExpirada">Fecha Límite: 11/01/2018</p>
                     </div>
                 </div>
             </div>
