Css de Pagos y General hecho

--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -30,7 +30,7 @@
     </div>
     <div class="content">
         <div class="pageTitle">
-            Inicio
+            Pagos
         </div>
         <div class="contenidoInicio">
 
