--- a/scr/webapp/html/pagos.html
+++ b/scr/webapp/html/pagos.html
@@ -23,8 +23,8 @@
             <ul class="navButtons">
                 <a href="index.html"><li class="navSelect">Inicio</li></a>
                 <a href="index.html"><li class="navButton">Partidos</li></a>
-                <a href="index.html"><li class="navButton">Pagos</li></a>
-                <a href="index.html"><li class="navButton">Pedidos</li></a>
+                <a href="pagos.html"><li class="navButton">Pagos</li></a>
+                <a href="pedidos.html"><li class="navButton">Pedidos</li></a>
             </ul>
         </div>
     </div>
@@ -39,7 +39,7 @@
                     <div class="pestanaFechaInicioPago">10/12/2017</div>
                     <div class="contenidoPago">
                         <h3 class="tituloPago">Mensual Diciembre</h3>
-                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">10€</p>
                         <p class="infoPago">Localizador: 234</p>
                         <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="pestanaFechaInicioPago">10/12/2017</div>
                     <div class="contenidoPago">
                         <h3 class="tituloPago">Mensual Diciembre</h3>
-                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">10€</p>
                         <p class="infoPago">Localizador: 234</p>
                         <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="pestanaFechaInicioPago">10/12/2017</div>
                     <div class="contenidoPago">
                         <h3 class="tituloPago">Mensual Diciembre</h3>
-                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">10€</p>
                         <p class="infoPago">Localizador: 234</p>
                         <p class="fechaLimiteExpirada">Fecha Límite: 11/01/2018</p>
                     </div>
@@ -66,7 +66,7 @@
                     <div class="pestanaFechaInicioPago">10/12/2017</div>
                     <div class="contenidoPago">
                         <h3 class="tituloPago">Mensual Diciembre</h3>
-                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">10€</p>
                         <p class="infoPago">Localizador: 234</p>
                         <p class="fechaLimitePago">Fecha Límite: 11/01/2018</p>
                     </div>
@@ -75,7 +75,7 @@
                     <div class="pestanaFechaInicioPago">10/12/2017</div>
                     <div class="contenidoPago">
                         <h3 class="tituloPago">Mensual Diciembre</h3>
-                        <p class="infoPago">10 euros</p>
+                        <p class="infoPago">10€</p>
                         <p class="infoPago">Localizador: 234</p>
                         <p class="fechaLimiteExpirada">Fecha Límite: 11/01/2018</p>
                     </div>
