--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -23,7 +23,7 @@
                 <a href="index.html"><li class="navSelect">Inicio</li></a>
                 <a href="index.html"><li class="navButton">Partidos</li></a>
                 <a href="pagos.html"><li class="navButton">Pagos</li></a>
-                <a href="index.html"><li class="navButton">Pedidos</li></a>
+                <a href="pedidos.html"><li class="navButton">Pedidos</li></a>
             </ul>
         </div>
     </div>
