--- a/scr/webapp/html/admin.html
+++ b/scr/webapp/html/admin.html
@@ -30,16 +30,10 @@
     </div>
     <div class="content">
         <div class="pageTitle">
-            Inicio
+            Panel de Control
         </div>
         <div class="contenidoInicio">
-            AAAAAAAA<br>
-            AAAAAAAA<br>
-            AAAAAAAA<br>
-            AAAAAAAA<br>
-            AAAAAAAA<br>
-            AAAAAAAA<br>
-
+            
         </div>
     </div>
 </div>
