--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -33,6 +33,8 @@
                 <a href="pedidos.html">
                     <li class="navButton">Pedidos</li>
                 </a>
+
+                <a href="admin.html"><li class="navButton">Admin</li></a>
             </ul>
         </div>
     </div>
