--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -77,7 +77,12 @@
                 </div>
             </div>
         </div>
-    </div>
+
+            <a href="crearSolicitud.html"> <input type="button" value="Crear solicitud"></a>
+        <a href="verSolicitudes.html"><input class = "botonVerSolicitudes" type="button" value="Ver solicitudes"></a>
+        </div>
+
+
 </div>
 </body>
 </html>
