Añadido php de pagos y algunas pruebas en sucio. Recordar cambiar usuario gestionBD.

--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -22,7 +22,7 @@
             <ul class="navButtons">
                 <a href="index.html"><li class="navSelect">Inicio</li></a>
                 <a href="index.html"><li class="navButton">Partidos</li></a>
-                <a href="pagos.html"><li class="navButton">Pagos</li></a>
+                <a href="misPagos.php"><li class="navButton">Pagos</li></a>
                 <a href="pedidos.html"><li class="navButton">Pedidos</li></a>
                 <a href="admin.html"><li class="navButton">Admin</li></a>
             </ul>
