Tocar un poco html y css de pedidos

--- a/scr/webapp/html/pedidos.html
+++ b/scr/webapp/html/pedidos.html
@@ -27,14 +27,16 @@
                 <a href="index.html">
                     <li class="navButton">Partidos</li>
                 </a>
-                <a href="pagos.html">
+                <a href="misPagos.php">
                     <li class="navButton">Pagos</li>
                 </a>
                 <a href="pedidos.html">
                     <li class="navButton">Pedidos</li>
                 </a>
 
-                <a href="admin.html"><li class="navButton">Admin</li></a>
+                <a href="admin.html">
+                    <li class="navButton">Admin</li>
+                </a>
             </ul>
         </div>
     </div>
@@ -53,6 +55,8 @@
                         <p class="infoPedido">40€</p>
                         <p class="infoPedido">Localizador: 234</p>
                         <p class="fechaLimitePedido">Fecha Límite: 11/01/2018</p>
+                        <a href="crearSolicitud.html" class="button button1">Crear solicitud</a>
+
                     </div>
                 </div>
                 <div id="pedidoCerrado1" class="pedidoCerrado">
@@ -63,26 +67,16 @@
                         <p class="infoPedido">10€</p>
                         <p class="infoPedido">Localizador: 234</p>
                         <p class="fechaLimitePedido">Fecha Límite: 30/12/2017</p>
-                    </div>
-                </div>
-                <div id="pedidoCerrado2" class="pedidoCerrado">
-                    <div class="pestanaFechaInicioPedido">01/02/2017</div>
-                    <div class="contenidoPedido">
-                        <h3 class="tituloPedido">Bola de baseball</h3>
-                        <p class="infoPedido">Proveedor: Deportes Sevilla</p>
-                        <p class="infoPedido">20€</p>
-                        <p class="infoPedido">Localizador: 234</p>
-                        <p class="fechaLimitePedido">Fecha Límite: 20/02/2017</p>
+                        <a href="crearSolicitud.html" class="button button1">Crear solicitud</a>
+
                     </div>
                 </div>
             </div>
+
+            <a href="verSolicitudes.html" class="button button2">Ver solicitudes</a>
         </div>
 
-            <a href="crearSolicitud.html"> <input type="button" value="Crear solicitud"></a>
-        <a href="verSolicitudes.html"><input class = "botonVerSolicitudes" type="button" value="Ver solicitudes"></a>
-        </div>
-
-
-</div>
+    </div>
+    </div>
 </body>
 </html>
