Unas pocas de cosas de Admin

--- a/scr/webapp/html/index.html
+++ b/scr/webapp/html/index.html
@@ -24,7 +24,7 @@
                 <a href="index.html"><li class="navButton">Partidos</li></a>
                 <a href="misPagos.php"><li class="navButton">Pagos</li></a>
                 <a href="pedidos.html"><li class="navButton">Pedidos</li></a>
-                <a href="admin.html"><li class="navButton">Admin</li></a>
+                <a href="admin.php"><li class="navButton">Admin</li></a>
             </ul>
         </div>
     </div>
